--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-9d5b6b61650d>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-3-f70d32a47254>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-9d5b6b61650d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'vandelay.com'add(www.) # 'www.vandelay.com'\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-f70d32a47254>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'vandelay.com'add+(www.) # 'www.vandelay.com'\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "'vandelay.com'add(www.) # 'www.vandelay.com'"
+    "'vandelay.com'add+(www.) # 'www.vandelay.com'"
    ]
   },
   {
