Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "'vandelay.com'add+(www.) # 'www.vandelay.com'"
+    "'vandelay.com'add+www # 'www.vandelay.com'"
    ]
   },
   {
