--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-479f5e9b811b>, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'www' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-479f5e9b811b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'vandelay.com'add+www # 'www.vandelay.com'\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-c1008a54bdd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'vandelay.com'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mwww\u001b[0m \u001b[0;31m# 'www.vandelay.com'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'www' is not defined"
      ]
     }
    ],
    "source": [
-    "'vandelay.com'+ # 'www.vandelay.com'"
+    "'vandelay.com'+www # 'www.vandelay.com'"
    ]
   },
   {
