--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "'vandelay.com'+www # 'www.vandelay.com'"
+    "'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
