--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-8f364723a49f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-8f364723a49f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    +www 'vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'vandelay.com'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "str  'vandelay.com' # 'www.vandelay.com'"
+    " 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
