--- a/index.ipynb
+++ b/index.ipynb
@@ -231,24 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'vandelay.com'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'www' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-e4224829781d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'vandelay.com'\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0mwww\u001b[0m \u001b[0;31m# 'www.vandelay.com'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'www' is not defined"
+     ]
     }
    ],
    "source": [
-    " 'vandelay.com' # 'www.vandelay.com'"
+    " 'vandelay.com'+ www # 'www.vandelay.com'"
    ]
   },
   {
