--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-205abbb7fc3b>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-12-ccb844f2e91f>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-205abbb7fc3b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    +(www)'vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-ccb844f2e91f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print+www'vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "print+(www)'vandelay.com' # 'www.vandelay.com'"
+    "print+www'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
