Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-ccb844f2e91f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-ccb844f2e91f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print+www'vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print+www'vandelay.com' # 'www.vandelay.com'"
+    "x='vandelay.com' y # 'www.vandelay.com'"
    ]
   },
   {
