Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,23 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-b512a4c71d0f>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-17-b769deeda1af>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-b512a4c71d0f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x='vandelay.com' y=www # 'www.vandelay.com'\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-b769deeda1af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x='vandelay.com' y=www # 'www.vandelay.com'\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "x='vandelay.com' y=www # 'www.vandelay.com'\n",
-    "z=y+x"
+    "print z=y+x"
    ]
   },
   {
