Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,8 @@
    ],
    "source": [
     "x='vandelay.com' y=www # 'www.vandelay.com'\n",
-    "print (z=y+x)"
+    "z= y+x\n",
+    "print "
    ]
   },
   {
