--- a/index.ipynb
+++ b/index.ipynb
@@ -231,24 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-643bd7d64a1a>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-19-63c57feb43e0>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-643bd7d64a1a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x='vandelay.com' y=www # 'www.vandelay.com'\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-63c57feb43e0>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x='vandelay.com' y=www # 'www.vandelay.com'\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "x='vandelay.com' y=www # 'www.vandelay.com'\n",
     "z= y+x\n",
-    "print "
+    "print(z) "
    ]
   },
   {
