Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "x='vandelay.com' y=www # 'www.vandelay.com'\n",
+    "x='vandelay.com' y='www # 'www.vandelay.com'\n",
     "z= y+x\n",
     "print(z) "
    ]
