Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-bd1b858efee4>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-bd1b858efee4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x='vandelay.com' y='www' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wwwvandelay.com\n"
      ]
     }
    ],
    "source": [
-    "x ='vandelay.com' y ='www' # 'www.vandelay.com'\n",
+    "x ='vandelay.com' \n",
+    "y = 'www' # 'www.vandelay.com'\n",
     "z = y + x\n",
     "print(z) "
    ]
