Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,24 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wwwvandelay.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x ='vandelay.com' \n",
-    "y = 'www' # 'www.vandelay.com'\n",
-    "z = y + x\n",
-    "print(z) "
+    "y = 'www.' # 'www.vandelay.com'\n",
+    "z = y + x\n"
    ]
   },
   {
