--- a/index.ipynb
+++ b/index.ipynb
@@ -231,15 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "x ='vandelay.com' \n",
     "y = 'www.' # 'www.vandelay.com'\n",
-    "z = y + x\n"
+    "z = y + x\n",
+    "print(z) "
    ]
   },
   {
